--- a/src/HappyTreeWords.mxml
+++ b/src/HappyTreeWords.mxml
@@ -1,12 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600">
+			   xmlns:mx="library://ns.adobe.com/flex/mx" 
+			   width="764" height="505"
+			   currentState="default"
+			   initialize="initializeHandler(event)"
+			   >
+
+	<fx:Script>
+		<![CDATA[
+			import flash.net.navigateToURL;
+			
+			import mx.events.FlexEvent;
+			
+			
+			private var xloader:URLLoader;
+			[Bindable] public var xData:XML;
+			
+			protected function getHelpBtn_clickHandler(event:MouseEvent):void
+			{
+				var url:URLRequest = new URLRequest("help.html");
+				navigateToURL(url, "_blank");
+			}
+
+			protected function aboutBtn_clickHandler(event:MouseEvent):void
+			{
+				var url:URLRequest = new URLRequest("about.html");
+				navigateToURL(url, "_blank");
+			}
+
+
+			protected function startGameBtn_clickHandler(event:MouseEvent):void
+			{
+				currentState="game";
+			}
+			
+			protected function onXDataProgress(event:ProgressEvent):void
+			{
+				progressBar.setProgress(Math.round(event.bytesLoaded/event.bytesTotal*100), 100);
+			}
+			protected function onXDataComplete(event:Event):void
+			{
+				xloader.removeEventListener(ProgressEvent.PROGRESS, onXDataProgress);
+				xloader.removeEventListener(Event.COMPLETE, onXDataComplete);
+				xData = XML(xloader.data);
+				currentState="start";
+				
+			}
+			protected function initializeHandler(event:FlexEvent):void
+			{
+				var request:URLRequest = new URLRequest("data.xml");
+				xloader = new URLLoader();
+				xloader.dataFormat = URLLoaderDataFormat.TEXT;
+				xloader.addEventListener(ProgressEvent.PROGRESS, onXDataProgress);
+				xloader.addEventListener(Event.COMPLETE, onXDataComplete);
+				xloader.load(request);
+			}
+			
+
+		]]>
+	</fx:Script>
+
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	<s:states>
+		<s:State name="default"/>
+		<s:State name="start"/>
+		<s:State name="game"/>
+	</s:states>
 	<fx:Style source="ro/infoiasi/english/default.css"/>
-	<s:Group id="mainGame">
+	<s:SkinnableContainer id="initScreen" includeIn="default" width="764" height="505">
+		<mx:ProgressBar label="Loading data..." minimum="0" maximum="100"  id="progressBar" horizontalCenter="0" verticalCenter="0"/>
+			
+	</s:SkinnableContainer>
+	<s:SkinnableContainer id="startScreen" includeIn="start" width="764" height="505">
+		<s:Label y="39" text="Hppy Tree Words" id="startGameTitle" horizontalCenter="0"/>
+		<mx:LinkButton label="Start the Game" click="startGameBtn_clickHandler(event)" id="startGameBtn" verticalCenter="0" left="50"/>
+		<mx:LinkButton click="getHelpBtn_clickHandler(event)" label="Get Help" id="getHelpBtn" verticalCenter="0" horizontalCenter="0"/>
+		<mx:LinkButton click="aboutBtn_clickHandler(event)" id="aboutBtn" label="About..." verticalCenter="0" right="50"/>
+	</s:SkinnableContainer>
+	<s:SkinnableContainer id="gameScreen" includeIn="game" width="100%" height="100%">
 		
-	</s:Group>
+	</s:SkinnableContainer>
+	
 </s:Application>
