--- a/src/ro/infoiasi/english/skins/WordSkin.mxml
+++ b/src/ro/infoiasi/english/skins/WordSkin.mxml
@@ -22,16 +22,8 @@
 -->
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
     xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha.disabled="0.5">
+	<fx:Metadata>[HostComponent("ro.infoiasi.english.view.WordPiece")]</fx:Metadata>
 
-    <fx:Metadata>
-    <![CDATA[ 
-        /** 
-         * @copy spark.skins.spark.ApplicationSkin#hostComponent
-         */
-        [HostComponent("spark.components.SkinnableContainer")]
-    ]]>
-    </fx:Metadata> 
-    
     <fx:Script fb:purpose="styling">
         <![CDATA[         
             /**
@@ -39,32 +31,33 @@
              */
             override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number) : void
             {
+                // Push backgroundColor and backgroundAlpha directly.
+                // Handle undefined backgroundColor by hiding the background object.
+               
+
+                
                 super.updateDisplayList(unscaledWidth, unscaledHeight);
             }
         ]]>        
     </fx:Script>
     
+	<fx:Declarations>
+		<s:DropShadowFilter id="dsFilter" inner="true" blurX="2" blurY="2" distance="2" angle="0"/>
+	</fx:Declarations>
+	
     <s:states>
         <s:State name="normal" />
-		<s:State name="done"/>
         <s:State name="disabled" />
     </s:states>
     
     <!--- Defines the appearance of the SkinnableContainer class's background. -->
-    <s:Rect id="backgroundNormal" includeIn="normal" left="0" right="0" top="0" bottom="0">
+    <s:Rect id="background" radiusX="5" radiusY="5" left="0" right="0" top="0" bottom="0" filters="{[dsFilter]}">
         <s:fill>
             <!--- @private -->
-			<s:BitmapFill source="@Embed('assets/tree_empty.png')"/>
+            <s:SolidColor id="bgFill" color="#FFFFFF"/>
         </s:fill>
     </s:Rect>
-	<s:Rect id="backgroundDone" includeIn="done" left="0" right="0" top="0" bottom="0">
-		<s:fill>
-			<!--- @private -->
-			<s:BitmapFill source="@Embed('assets/tree_full.png')"/>
-		</s:fill>
-	</s:Rect>
-	
-	
+    
     <!--
         Note: setting the minimum size to 0 here so that changes to the host component's
         size will not be thwarted by this skin part's minimum size.   This is a compromise,
