--- a/src/HappyTreeWords.mxml
+++ b/src/HappyTreeWords.mxml
@@ -11,11 +11,8 @@
 		<![CDATA[
 			import flash.net.navigateToURL;
 			
-			import mx.controls.Alert;
-			import mx.core.DragSource;
-			import mx.core.UIComponent;
+			import mx.core.IVisualElement;
 			import mx.events.FlexEvent;
-			import mx.managers.DragManager;
 			
 			import ro.infoiasi.english.model.WordVO;
 			import ro.infoiasi.english.utils.GameUtils;
@@ -29,6 +26,8 @@
 			private var currentScore:int;
 			[Bindable]
 			private var currentGameLevel:int;
+			[Bindable]
+			private var currentSentenceIndex:int;
 			[Bindable] public var xData:XML;
 			
 			protected function getHelpBtn_clickHandler(event:MouseEvent):void
@@ -92,25 +91,61 @@
 				playLevel();
 			}
 			
+			
+			private function clearLevelWordsUI():void
+			{
+				var element:IVisualElement;
+				while(dragSources.numElements > 0)
+				{
+					element = dragSources.removeElementAt(0);
+					removeEventListeners(element);
+				}
+				while(dropTargets.numElements > 0)
+				{
+					element = dropTargets.removeElementAt(0);
+					removeEventListeners(element);
+				}
+				while(droppedItems.numElements > 0)
+				{
+					element = droppedItems.removeElementAt(0);
+					removeEventListeners(element);
+				}
+				
+			}
+			
+			private function addEventListeners(element:IVisualElement):void
+			{
+				element.addEventListener(MouseEvent.MOUSE_DOWN, onWordMouseDown);
+				element.addEventListener(MouseEvent.MOUSE_UP, onWordMouseUp);
+			}
+			
+			private function removeEventListeners(element:IVisualElement):void
+			{
+				element.removeEventListener(MouseEvent.MOUSE_DOWN, onWordMouseDown);
+				element.removeEventListener(MouseEvent.MOUSE_UP, onWordMouseUp);
+			}
+			
 			private function playLevel():void
 			{
+				currentGameLevel = Math.floor(currentSentenceIndex/3);
+				playSentence();
+			}
+			
+			private function playSentence():void
+			{
 				
-				dragTargets.removeAllElements();
-				dropTargets.removeAllElements();
-				droppedItems.removeAllElements();
-				
+				clearLevelWordsUI();
+				validationTree.alpha = 0;
 				var words:Vector.<WordVO> = new Vector.<WordVO>();
-				var structure:WordVO = GameUtils.createPhrase(currentGameLevel, xData, words);
+				var structure:WordVO = GameUtils.createPhrase(currentSentenceIndex, xData, words);
 				this.currentLevelWordsCount = words.length;
 				var i:int;
 				for(i = 0; i < currentLevelWordsCount; i++)
 				{
 					var wordp:WordPiece = new WordPiece();
 					wordp.wordValue = words[i];
-					wordp.addEventListener(MouseEvent.MOUSE_OVER, onWordMouseMove);
-					wordp.addEventListener(MouseEvent.MOUSE_DOWN, onWordMouseDown);
-					wordp.addEventListener(MouseEvent.MOUSE_UP, onWordMouseUp);
-					dragTargets.addElement(wordp);
+					addEventListeners(wordp);
+					dragSources.addElement(wordp);
 					wordp.text = words[i].form;
 					wordp.isBlank = false;
 					
@@ -120,13 +155,15 @@
 				
 				drawTree(structure, 0);
 				
-				callLater(function():void{
-				words[0].ui.x = 0;
-				
-				for(i = 1; i < currentLevelWordsCount; i++)
+				callLater(function():void
 				{
-					words[i].ui.x = words[i-1].ui.x + words[i-1].ui.width + 10;  
-				}
+					words[0].ui.x = 0;
+				
+					for(i = 1; i < currentLevelWordsCount; i++)
+					{
+						words[i].ui.x = words[i-1].ui.x + words[i-1].ui.width + 10;  
+						//words[i].ui.x = words[i-1].ui.x + 60;
+					}
 				});
 			}
 			private function drawTree(structure:WordVO, level:int):void
@@ -150,17 +187,11 @@
 			}
 			
 			
-			protected function onWordMouseMove(event:MouseEvent):void
-			{
-				
-				
-			}
 			
 			protected function onWordMouseDown(event:MouseEvent):void
 			{
 				var word:WordPiece = WordPiece(event.currentTarget);
 				droppedItems.addElement(word);
-				currentLevelWordsCount = Math.max(--currentLevelWordsCount, 0) ;
 				word.startDrag(false, new Rectangle(0, 0, 490, 430));
 			}
 			
@@ -168,37 +199,71 @@
 			{
 				var word:WordPiece = WordPiece(event.currentTarget);
 				word.stopDrag();
+				var hitted:Boolean = false;
 				for(var i:int = 0; i < dropTargets.numElements; i++)
 				{
-					var targetWord:DisplayObject = dropTargets.getElementAt(i) as DisplayObject;
+					var targetWord:WordPiece = dropTargets.getElementAt(i) as WordPiece;
 					if(word.hitTestObject(targetWord))
 					{
-						var point:Point = new Point(targetWord.x, targetWord.y);
+						hitted = true;
+						if(word.wordValue.head == 0 || currentGameLevel == 0)
+						{
+							if(targetWord.wordValue == word.wordValue)
+							{
+								GameUtils.translateCoords(targetWord, word, dropTargets, dragSources);
+								break;;
+							}
+							else
+							{
+								dragSources.addElementAt(word, word.wordValue.id-1);
+								return;
+							}
+						}
+						//il lasi oricum
+						/*var point:Point = new Point(targetWord.x, targetWord.y);
 						var gPoint:Point = dropTargets.localToGlobal(point);
 						var lPoint:Point = dragTargets.globalToLocal(gPoint);
 						word.x = lPoint.x;
 						word.y = lPoint.y;
+						*/
+						GameUtils.translateCoords(targetWord, word, dropTargets, dragSources);
 						break;
 					}
 				}
+				var icorrectItems:int = updateTree();
+				
+				if(!hitted)
+				{
+					dragSources.addElementAt(word, word.wordValue.id-1 - (dropTargets.numElements - icorrectItems));
+				}
+				
+					
+				var ratio:Number = 1-icorrectItems/dropTargets.numElements;
+				validationTree.alpha=ratio;
+				
 			}
 			
-			protected function validateBtn_clickHandler(event:MouseEvent):void
+			private function updateTree():int
 			{
-				var i:int = 0;
-				for(i =0 ;i < droppedItems.numElements; i++)
+				var incorrectCount:int = dropTargets.numElements;
+				for(var i:int =0; i < droppedItems.numElements; i++)
 				{
 					var sourceWord:WordPiece = droppedItems.getElementAt(i) as WordPiece;
 					var destinationWord:DisplayObject = sourceWord.wordValue.ui;
 					if(sourceWord.hitTestObject(destinationWord))
 					{
-						currentScore += 10;
+						incorrectCount--;
 					}else
 					{
 						//currentScore -= 10;
 					}
 				}
-				currentGameLevel ++;
+				return incorrectCount;
+			}
+			
+			protected function validateBtn_clickHandler(event:MouseEvent):void
+			{
+				currentSentenceIndex ++;
 				playLevel();
 				
 			}
@@ -226,14 +291,15 @@
 	</s:SkinnableContainer>
 	<s:SkinnableContainer id="gameScreen" includeIn="game" width="100%" height="100%">
 		<s:Image source="@Embed('assets/tree_empty.png')" verticalCenter="0" left="10"/>
+		<s:Image source="@Embed('assets/tree_full.png')" alpha="0" id="validationTree" verticalCenter="0" left="10"/>
 		<s:Group id="dropTargets" horizontalCenter="-130" verticalCenter="0">
 		</s:Group>
-		<s:HGroup gap="5" id="dragTargets"/>
+		<s:HGroup gap="5" id="dragSources"/>
 		<s:Group id="droppedItems"/>
 		<s:Group width="250" right="0" top="0" bottom="0">
 			<mx:Label fontFamily="Englebert" color="#FFFFFF" fontSize="15" text="Punctaj {currentScore}" horizontalCenter="0" y="30"/>
 			<mx:Label fontFamily="Englebert" color="#FFFFFF" fontSize="15" text="Nivelul {currentGameLevel+1}" horizontalCenter="0" y="50"/>
-			<s:Button enabled="{currentLevelWordsCount==0}" id="validateBtn" label="Verifica!" click="validateBtn_clickHandler(event)" horizontalCenter="0" bottom="10"/>
+			<s:Button enabled="{dragSources.numElements==0}" id="validateBtn" label="Treci la urmatoarea propozitie" click="validateBtn_clickHandler(event)" horizontalCenter="0" bottom="10"/>
 		</s:Group>
 	</s:SkinnableContainer>
 	
