--- a/src/ro/infoiasi/english/skins/GameScreenSkin.mxml
+++ b/src/ro/infoiasi/english/skins/GameScreenSkin.mxml
@@ -53,16 +53,22 @@
     
     <!--- Defines the appearance of the SkinnableContainer class's background. -->
     <s:Rect id="background" left="0" right="0" top="0" bottom="0">
+		
         <s:fill>
-            <!--- @private -->
-			<s:BitmapFill source="@Embed('assets/start_screen_bg.png')"/>
+            
+			
+			<s:BitmapFill source="@Embed('assets/game_screen_bg.png')"/>
+			
         </s:fill>
+		
     </s:Rect>
+	<!--
 	<s:Rect id="backgroundSide" width="240" right="0" top="0" bottom="0">
 		<s:fill>
-			<s:SolidColor color="#3F48CC" alpha=".5"/>
+			<s:SolidColor color="#3F48CC" alpha=".1"/>
 		</s:fill>
 	</s:Rect>
+	-->
     <!--
         Note: setting the minimum size to 0 here so that changes to the host component's
         size will not be thwarted by this skin part's minimum size.   This is a compromise,
